[feat] update swagger & add swagger path
