# docs/swagger.json
@@ -34,7 +34,7 @@
             }
         },
         "/api/v1/attestation/sign": {
-            "get": {
+            "post": {
                 "description": "Sign with app derived key for current (simulated) tee version",
                 "consumes": [
                     "application/json"
@@ -53,7 +53,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.SignRequest"
                         }
                     }
                 ],
@@ -111,7 +111,7 @@
                 }
             }
         },
-        "/delete": {
+        "/api/v1/kv/delete": {
             "delete": {
                 "description": "Delete a key-value pair",
                 "consumes": [
@@ -126,11 +126,13 @@
                 "summary": "Delete a key-value pair",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Key",
-                        "name": "key",
-                        "in": "query",
-                        "required": true
+                        "description": "Request to delete",
+                        "name": "DeleteRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/web.DeleteKvRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -149,7 +151,7 @@
                 }
             }
         },
-        "/quota": {
+        "/api/v1/kv/quota": {
             "get": {
                 "description": "Get the quota of the current application, return the number of keys that can be written",
                 "produces": [
@@ -175,7 +177,7 @@
                 }
             }
         },
-        "/read": {
+        "/api/v1/kv/read": {
             "get": {
                 "description": "Read a key-value pair, If the target key is protected, the protector must be provided.",
                 "consumes": [
@@ -213,7 +215,7 @@
                 }
             }
         },
-        "/write": {
+        "/api/v1/kv/write": {
             "post": {
                 "description": "Write a key-value pair, If Provision is provided, the remote provision information will be added, and only the provisioner can write it, If Protected is provided, the target key will be protected, and only the protector can read it.",
                 "consumes": [
@@ -229,36 +231,11 @@
                 "parameters": [
                     {
                         "description": "Key",
-                        "name": "key",
+                        "name": "keyInfo",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Value",
-                        "name": "value",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Remote Provision Signature, Should be pubKey(64b) || sig(appKey(64byte) || keccak256(key) ||  keccak256(value)))",
-                        "name": "provision",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Protect Target Key",
-                        "name": "protected",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.WriteKvRequest"
                         }
                     }
                 ],
@@ -305,6 +282,14 @@
                 }
             }
         },
+        "web.DeleteKvRequest": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                }
+            }
+        },
         "web.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -328,21 +313,36 @@
             "type": "object",
             "properties": {
                 "present": {
+                    "description": "Present is the flag to indicate if the key exists",
                     "type": "boolean"
                 },
                 "protected": {
+                    "description": "Protected is the flag to indicate if the key is protected",
                     "type": "boolean"
                 },
                 "protector": {
+                    "description": "Protector is the protector of the key, if any",
                     "type": "string"
                 },
                 "provisioned": {
+                    "description": "Provisioned is the flag to indicate if the key is provisioned",
                     "type": "boolean"
                 },
                 "provisioner": {
+                    "description": "Provisioner is the provisioner of the key, if any",
                     "type": "string"
                 },
                 "value": {
+                    "description": "Value is the value of the key",
+                    "type": "string"
+                }
+            }
+        },
+        "web.SignRequest": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "Data is the data to be signed",
                     "type": "string"
                 }
             }
@@ -354,6 +354,31 @@
                     "type": "string"
                 },
                 "signature": {
+                    "type": "string"
+                }
+            }
+        },
+        "web.WriteKvRequest": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "description": "Key is the key to write",
+                    "type": "string"
+                },
+                "overwrite": {
+                    "description": "Overwrite is the flag to overwrite the existing key, default is false",
+                    "type": "boolean"
+                },
+                "protected": {
+                    "description": "Protected is the protector information, leave empty if not needed",
+                    "type": "string"
+                },
+                "provision": {
+                    "description": "Provision is the provision information, leave empty if not needed",
+                    "type": "string"
+                },
+                "value": {
+                    "description": "Value is the value to write",
                     "type": "string"
                 }
             }
